<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_apps">My Nanodegree Apps</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="scores_app">Football Scores</string>
    <string name="library_app">Library</string>
    <string name="build_big">Build It Bigger</string>
    <string name="xyz_read">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>

</resources>
