<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal" tools:context=".MainActivity">

    <TextView
        android:id="@+id/content_header"
        android:text="@string/my_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_popular_movies"
        style="@style/CustomAppButtonStyle"
        android:text="@string/popular_movies"
        android:layout_below="@+id/content_header" android:layout_marginTop="15dp"
        android:backgroundTint="@color/btn_custom_color_common"
        android:onClick="sendMessage" />

    <Button
        android:id="@+id/btn_live_scores"
        style="@style/CustomAppButtonStyle"
        android:layout_below="@+id/btn_popular_movies"
        android:text="@string/scores_app"
        android:onClick="sendMessage"
        android:backgroundTint="@color/btn_custom_color_common" />

    <Button
        android:id="@+id/btn_library_app"
        style="@style/CustomAppButtonStyle"
        android:layout_below="@+id/btn_live_scores"
        android:text="@string/library_app"
        android:onClick="sendMessage"
        android:backgroundTint="@color/btn_custom_color_common" />

    <Button
        android:id="@+id/btn_build_it_bigger"
        style="@style/CustomAppButtonStyle"
        android:layout_below="@+id/btn_library_app"
        android:text="@string/build_big"
        android:onClick="sendMessage"
        android:backgroundTint="@color/btn_custom_color_common" />

    <Button
        android:id="@+id/btn_xyz_reader"
        style="@style/CustomAppButtonStyle"
        android:layout_below="@+id/btn_build_it_bigger"
        android:text="@string/xyz_read"
        android:onClick="sendMessage"
        android:backgroundTint="@color/btn_custom_color_common" />

    <Button
        android:id="@+id/btn_capstone"
        style="@style/CustomAppButtonStyle"
        android:layout_below="@+id/btn_xyz_reader"
        android:text="@string/capstone"
        android:onClick="sendMessage"
        android:backgroundTint="@color/btn_custom_color_capstone" />
</RelativeLayout>

